# playlist-aggregator

./: .gitignore  Cargo.toml  tracks
src/: boxy.rs  color.rs  lib.rs  main.rs
