[package]
name = "spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
rspotify = { version = "0.11.5", features = ["env-file", "cli"] }
futures-util = "0.3.21"
chrono = "0.4"
anyhow = { version = "1.0", features = ["std"] }
env_logger = "0.9.0"